# hyperion

./: .gitattributes  .gitignore  1Stop  1Stop-CMake  1Stop.cmd  BOOST_LICENSE_1_0.txt  BUILDING  BUILDING.txt  CHANGES  CMakeLists.txt  COPYRIGHT  DoConfigure  GetGitHash  GetGitHash.cmd  Hercules.dsp  Hercules.dsw  Hercules.sln  Hercules.vcproj  Hercules.vcxproj  Hercules.vcxproj.filters  Hercules_VS2010.sln  Hercules_VS2012.sln  Hercules_VS2012.vcxproj  Hercules_VS2015.sln  Hercules_VS2015.vcxproj  Hercules_VS2015.vcxproj.filters  INSTALL  Makefile.am  Makefile.in  README.AIX  README.APL360  README.BSD  README.BuildUNIX.txt  README.BuildWIN.txt  README.BuildWINSupp.txt  README.CMPSC  README.CMPSCTST  README.COMMADPT  README.CVS  README.DECNUMBER  (+414 more)
CMake/: CMakeHercTestAtomic.c  CMakeHercTestC11Atomic.c  CMakeHercTestC99FlexArrays.c  CMakeHercTestPackedStruct.c  CMakeHercTestRegparm3.c  CMakeHercTestStrictAliasing.c  CMakeHercTestStructPadding.c  CMakeHercTestSync.c  CMakeconfig.h.in  Herc00_Includes.cmake  Herc01_GitVer.cmake  Herc02_ExtPackageBuild.cmake  Herc03_CopySharedLib.cmake  Herc10_OptDef.cmake  Herc12_OptEdit.cmake  Herc20_TargetEnv.cmake  Herc22_Userland.cmake  Herc22_UserlandWin.cmake  Herc25_CompilerMSVC.cmake  Herc25_Compilergcclike.cmake  Herc28_OptSelect.cmake  Herc31_COptsAppleGNU.cmake  Herc31_COptsClang.cmake  Herc31_COptsGNU.cmake  Herc31_COptsMSVC.cmake  Herc31_COptsUnknown.cmake  Herc41_ExtPackageBuild.cmake  Herc60_CreateTargets.cmake  Herc61_SlibSource.cmake  Herc65_ExtPackageWinCopy.cmake  cmake_uninstall.cmake.in  commitinfo.h.in  herc_setWindowsTarget.cmake
SoftFloat/: Makefile.am  Makefile.in  SoftFloat-fixme.h  SoftFloat-macros.h  SoftFloat-specialise.h  SoftFloat-types.h  SoftFloat.c  SoftFloat.h  milieu.h
SoftFloat-Fish/: SoftFloat-macros.h  SoftFloat-specialise.h  SoftFloat-types.h  SoftFloat.c  SoftFloat.h  milieu.h
autoconf/: README  config.guess  config.rpath  hercules.m4  libtool.m4  ltdl.m4  ltmain.sh
crypto/: CMakeLists.txt  Makefile.am  aes.c  aes.h  des.c  des.h  dyncrypt.c  sha1.c  sha1.h  sha256.c  sha256.h  sha512.h
decNumber/: CMakeLists.txt  Makefile.am  decBasic.h  decCommon.h  decContext.c  decContext.h  decDPD.h  decDouble.c  decNumber.c  decNumber.def  decNumber.h  decNumber.rc  decNumberLocal.h  decPacked.c  decPacked.h  decQuad.c  decSingle.c  decimal128.c  decimal128.h  decimal32.c  decimal32.h  decimal64.c  decimal64.h  readme.txt
hercvsnet/: hercvsnet.sln
hercvsnet/hdasd/: hdasd.vcproj
hercvsnet/hdevices/: hdevices.vcproj
hercvsnet/hengine/: hengine.vcproj
hercvsnet/hercules/: hercules.vcproj
hercvsnet/hsys/: hsys.vcproj
hercvsnet/htape/: htape.vcproj
hercvsnet/hutil/: hutil.vcproj
html/: Makefile.am  Makefile.in  README.md  cckddasd.html  fishgui.html  hercconf.html  hercfaq.html  hercinst.html  herclic.html  hercload.html  hercmsca.html  hercmscf.html  hercmscp.html  hercmsct.html  hercmscu.html  hercmsda.html  hercmsdc.html  hercmsdg.html  hercmsdi.html  hercmsdl.html  hercmsdn.html  hercmsds.html  hercmsdt.html  hercmsdu.html  hercmsg.html  hercmshd.html  hercmshe.html  hercmshg.html  hercmshm.html  hercmsht.html  hercmshu.html  hercmsif.html  hercmsin.html  hercmslc.html  hercmslg.html  hercmspn.html  hercmspr.html  hercmspu.html  hercmsrd.html  hercmssd.html  (+20 more)
html/CMake/: buildopts.html  cmakeopts.html  extpkg.html  faq.html  index.html
html/include/: header.htmlpart
intl/: loadmsgcat.c
m4/: ChangeLog  Makefile.am  Makefile.in
man/: Makefile.am  Makefile.in  cckd.4  cckddiag.1  dasdseq.1  vmfplc2.1
msvc.makefile.includes/: BZIP2_DIR.msvc  BZIP2_FLAGS.msvc  BZIP2_RULES.msvc  CONFIG.msvc  DEBUG_RETAIL.msvc  EXTPKG_DIRS.msvc  EXTPKG_FLAGS.msvc  HERC_FLAGS.msvc  HQA_DIR.msvc  HQA_FLAGS.msvc  IPV6_FLAGS.msvc  MODULES.msvc  MOD_RULES1.msvc  MOD_RULES2.msvc  OBJ_CODE.msvc  OUTDIR_RULES.msvc  OUTPUT_DIRS.msvc  PCRE_DIR.msvc  PCRE_FLAGS.msvc  PCRE_RULES.msvc  PRIM_RULES.msvc  REXX_DIR.msvc  REXX_DIRS.msvc  REXX_DIRS.msvc.StdRexxInstall  REXX_FLAGS.msvc  REXX_FLAGS.msvc.StdRexxInstall  REXX_RULES.msvc  VERSION.msvc  ZLIB_DIR.msvc  ZLIB_FLAGS.msvc  ZLIB_RULES.msvc
po/: ChangeLog  LINGUAS  Makefile.in  Makefile.in.in  Makevars  POTFILES.in  buildpot.sh  de.po  hercules.pot  nl.po
scripts/: cmpsc.cnf  cmpsc.rexx  hbasics  hcommand.rexx  hexecio.rexx  hlinein.rexx  hrecurs.rexx  sample.rexx
tests/: CMakeLists.txt  Makefile.am  README  a.core  agf.assemble  agf.listing  agf.tst  agf.txt  alsi.txt  asmtst.xedit  awsbsf.aws  awsbsf.tst  axtr.txt  b.core  bctr.core  bfp-001-divtoint.asm  bfp-001-divtoint.core  bfp-001-divtoint.list  bfp-001-divtoint.tst  bfp-002-loadr.asm  bfp-002-loadr.core  bfp-002-loadr.list  bfp-002-loadr.tst  bfp-003-loadfpi.asm  bfp-003-loadfpi.core  bfp-003-loadfpi.list  bfp-003-loadfpi.tst  bfp-004-cvttolog.asm  bfp-004-cvttolog.core  bfp-004-cvttolog.list  bfp-004-cvttolog.tst  bfp-005-cvttolog64.asm  bfp-005-cvttolog64.core  bfp-005-cvttolog64.list  bfp-005-cvttolog64.tst  bfp-006-cvttofix.asm  bfp-006-cvttofix.core  bfp-006-cvttofix.list  bfp-006-cvttofix.tst  bfp-007-cvttofix64.asm  (+385 more)
util/: CMPSC.txt  Makefile.am  Makefile.in  TMOUNT.txt  WSMInstallScript.nsi  WSMInstallScriptLicense.rtf  awssl-v19g  awswrite.jcl  bldlvlck  cckddump.hla  cckdload.hla  configure.ac  cvslvlck  dasdlist  dasdlist.bat  rawstape.jcl  scsiboot  tapeconv.jcl  voldsext.cmd
